# TurtleBot2
add_cnoid_simple_controller(TurtleBot2JoystickController TurtleBot2JoystickController.cpp)
add_cnoid_simple_controller(TurtleBot2StraightController TurtleBot2StraightController.cpp)
target_link_libraries(TurtleBot2StraightController CnoidBodyPlugin)
add_cnoid_simple_controller(TurtleBot2TurningController TurtleBot2TurningController.cpp)
target_link_libraries(TurtleBot2TurningController CnoidBodyPlugin)
add_cnoid_simple_controller(TurtleBot2StopLineController TurtleBot2StopLineController.cpp)
target_link_libraries(TurtleBot2StopLineController CnoidBodyPlugin)
add_cnoid_simple_controller(TurtleBot2TurnLineController TurtleBot2TurnLineController.cpp)
target_link_libraries(TurtleBot2TurnLineController CnoidBodyPlugin)
add_cnoid_simple_controller(TurtleBot2AutoController TurtleBot2AutoController.cpp)
target_link_libraries(TurtleBot2AutoController CnoidBodyPlugin)

# Autorace Course
add_cnoid_simple_controller(TrafficLightController TrafficLightController.cpp)
target_link_libraries(TrafficLightController CnoidBodyPlugin)

